Fix: overflowing content

--- a/css/style.css
+++ b/css/style.css
@@ -1614,6 +1614,7 @@ template {
   line-height: 23px;
   text-transform: uppercase;
   color: inherit;
+  word-break: break-word;
 }
 
 .footer__title--inline {
@@ -1638,10 +1639,13 @@ template {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-weight: normal;
   font-size: 14px;
   line-height: 22px;
   color: #BDBDBD;
+  word-break: break-word;
 }
 
 .footer__item--mb-2 {
@@ -1655,6 +1659,7 @@ template {
 .footer__link {
   text-decoration: none;
   color: inherit;
+  word-break: break-word;
 }
 
 .footer__text {
@@ -1664,6 +1669,7 @@ template {
   font-size: 14px;
   line-height: 22px;
   color: #BDBDBD;
+  word-break: break-word;
 }
 
 .footer__icon-wrapper {
@@ -1741,6 +1747,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #E0E0E0;
+  word-break: break-word;
 }
 
 .footer-bottom {
@@ -1770,6 +1777,7 @@ template {
   margin-right: 6px;
   color: inherit;
   text-decoration: none;
+  word-break: break-word;
 }
 
 .footer-bottom__link:last-child {
