--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -50,6 +50,7 @@
     line-height: 23px
     text-transform: uppercase
     color: inherit
+    word-break: break-word
     &--inline
       margin-bottom: 0
       margin-right: 43px
@@ -62,10 +63,12 @@
   &__item
     display: flex
     align-items: flex-start
+    flex-wrap: wrap
     font-weight: normal
     font-size: 14px
     line-height: 22px
     color: $text-secondary
+    word-break: break-word
     &--mb-2
       margin-bottom: 22px
       &:last-child
@@ -73,6 +76,7 @@
   &__link
     text-decoration: none
     color: inherit
+    word-break: break-word
   &__text
     margin-top: 0
     margin-bottom: 25px
@@ -80,6 +84,7 @@
     font-size: 14px
     line-height: 22px
     color: $text-secondary
+    word-break: break-word
   &__icon-wrapper
     width: 40px
   &-form
@@ -124,6 +129,7 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+    word-break: break-word
   &-bottom
     display: grid
     grid-template-columns: repeat(4, 1fr)
@@ -140,6 +146,7 @@
       margin-right: 6px
       color: inherit
       text-decoration: none
+      word-break: break-word
       &:last-child
         margin-right: 0
     &__payments-info
